issue fixed with navbar colour contrast and changed to more better colour which can be better

--- a/styles/before-main.css
+++ b/styles/before-main.css
@@ -84,3 +84,12 @@ a:hover, a:focus, input:focus {
   outline: none;
   border-color: transparent;
 }
+
+
+.navbar-dark .navbar-nav .nav-link {
+  color: #ffffff; 
+}
+
+.navbar-dark {
+  background-color: #0056b3; 
+}
